--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
     <section>
         <h2>Чем мы занимаемся</h2>
         <ul>
-        <li><img src="./images/Notepad.jpg" alt="" width="370"></li>
-        <li><img src="./images/PhoneLaptop.jpg" alt="" width="370"></li>
-        <li><img src="./images/Pixel.jpg" alt="" width="370"></li>
+        <li><img src="./images/Notepad.jpg" alt="" width="370" height="294"></li>
+        <li><img src="./images/PhoneLaptop.jpg" alt="" width="370" height="294"></li>
+        <li><img src="./images/Pixel.jpg" alt="" width="370" height="294"></li>
         </ul>
     </section>
     <section>
@@ -72,24 +72,24 @@
         <ul>
     
         <li>
-            <img src="./images/Igor.jpg" alt="Игорь Демьяненко"  width="260">
+            <img src="./images/Igor.jpg" alt="Игорь Демьяненко"  width="270"  height="260">
             <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <p lang="en">Product Designer</p>
         </li>
         <li>
-            <img src="./images/Olha.jpg" alt="Ольга Репина"  width="260">
+            <img src="./images/Olha.jpg" alt="Ольга Репина"  width="270" height="294">
             <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <p lang="en">Frontend Developer</p>
         </li>
         <li>
-            <img src="./images/Nikolay.jpg" alt="Николай Тарасов"  width="260">
+            <img src="./images/Nikolay.jpg" alt="Николай Тарасов"  width="270" height="294">
             <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <p lang="en">Marketing</p>
         </li>
         <li>
-            <img src="./images/Michail.jpg" alt="Михаил Ермаков"  width="260">
+            <img src="./images/Michail.jpg" alt="Михаил Ермаков"  width="270" height="294">
             <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <p lang="en">UI Designer</p>
         </li>
         </ul>
     </section>
@@ -100,7 +100,8 @@
             <span>Web</span>Studio
         </a>
 
-        <address>г. Киев, пр-т Леси Украинки, 26</address>
+        <address>
+            <a href="https://goo.gl/maps/9YoqFHSqJAAs1rC1A" target="_blank">г. Киев, пр-т Леси Украинки, 26</a></address>
 
         <address>
         <a href="mailto:info@example.com">info@example.com</a>
